examples/test/testpolicy4017.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4017
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key20: value46
      key44: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value44
          key1: value30
          key16: value41
      podSelector:
        matchLabels:
          key15: value49
          key42: value35
          key27: value32
